--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Revision history for Perl extension Net::Google::GData
 
+0.07    Mon Dec 18 13:25:50 2009
+
+        - now uses Any::Moose
+        - OAuth support with Net::Google::DataAPI::Auth::OAuth
+        - Net::Google::DataAPI::Role::Service stops using MooseX::Role::Parameterized
+        - multipart request support
+        - less strict role check for feedurl
+        - support for existing query form for request
+
 0.06    Thu Oct 15 13:44:10 2009
 
         - change arguments for from_atom callback of feedurl to ($self, $atom)
